package co.edu.uniquindio.casasrurales.enums;

public enum EstadoPago {
    PENDIENTE,
    VERIFICADO,
    RECHAZADO
}
