package co.edu.uniquindio.casasrurales.enums;

public enum EstadoReserva {
    PENDIENTE_PAGO,
    CONFIRMADA,
    VENCIDA,
    ANULADA
}
