package co.edu.uniquindio.casasrurales.enums;

public enum ModalidadAlquiler {
    CASA_ENTERA,
    POR_HABITACIONES,
    AMBAS
}
