package co.edu.uniquindio.casasrurales.enums;

public enum TipoCama {
    SENCILLA,
    DOBLE
}
