package co.edu.uniquindio.casasrurales.enums;

public enum TipoReserva {
    CASA_ENTERA,
    POR_HABITACIONES
}
